--- a/Src/DataSample.Client/DataSample.Client.csproj
+++ b/Src/DataSample.Client/DataSample.Client.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <None Remove="appsettings.json" />
+    <None Remove="Views\EditProductWindow.xaml" />
   </ItemGroup>
 
   <ItemGroup>
@@ -25,6 +26,12 @@
     <ProjectReference Include="..\DataSample.BusinessLayer\DataSample.BusinessLayer.csproj" />
     <ProjectReference Include="..\DataSample.Common\DataSample.Common.csproj" />
     <ProjectReference Include="..\DataSample.DataAccessLayer\DataSample.DataAccessLayer.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Page Update="Views\EditProductWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
 
 </Project>
