--- a/Src/DataSample.Benchmark/DataSample.Benchmark.csproj
+++ b/Src/DataSample.Benchmark/DataSample.Benchmark.csproj
@@ -7,7 +7,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="appsettings.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.0.0-preview.19074.2" />
+    <PackageReference Include="Telerik.Windows.Controls.Chart.for.Wpf.Trial" Version="2019.1.116" />
+    <PackageReference Include="Telerik.Windows.Controls.Data.for.Wpf.Trial" Version="2019.1.116" />
+    <PackageReference Include="Telerik.Windows.Controls.Navigation.for.Wpf.Xaml.Trial" Version="2019.1.116" />
   </ItemGroup>
 
   <ItemGroup>
